2004-11-30  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: use Steve Swales' method for handling 
	locale determination
	* src/GrampsBSDDB.py: added remove_object task
	* src/MediaView.py: Handle drag and drop better

2004-11-30 Alex Roitman  <shura@alex.neuro.umn.edu>
	* NEWS: Update.

	* src/gramps_main.py (init_interface): Work around gtk/libglade
	bug by using horrible and ugly hack; (build_backhistmenu,
	build_fwdhistmenu): Use gramps IDs instead of handles in menus.

2004-11-29  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: simpler way of handling patronymic names
	based of LANG
	* src/FamilyView.py: clear childlist if no spouse exists

2004-11-29 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py: Support for re-building Open Recent submenu
	and opening files from it.
	* src/ArgHandler.py: Rebuild recent menu after adding to recent.
	* src/DbPrompter.py (open_native): Add function.
	* src/RecentFiles.py (remove_filename): Add function.

2004-11-28 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/PatchNames.py: Typo.
	* src/plugins/ChangeNames.py: Correct description.

	* src/RecentFiles.py: Add support for Gramps' own recent items.
	* src/DbPrompter.py: Support for Gramps' own recent items.
	* src/ArgHandler.py: Support for Gramps' own recent items.
	* src/gramps.glade: Add Open Recent submenu.
	* src/gramps_main.py: Preliminary support for Open Recent submenu.

2004-11-28  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: Allow the photo to accept events, allowing us
	to display a popup menu similar to galleries
	* src/gramps.glade: Add eventbox to the image, allowing events
	* src/MediaView.py: use object handle instead of gramps ID when
	getting value from the list.

2004-11-27  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/PatchNames.py: add the ability to detect
	common surname prefixes
	* src/plugins/patchnames.glade: clean up description