@@ -48,9 +48,13 @@ import gtk
 import const
 import RelLib
 import Date
+import DateHandler
 from TransTable import TransTable
 from gettext import gettext as _
 from Utils import for_each_ancestor
+
+
+_date_parser = DateHandler.create_parser()
 
 #-------------------------------------------------------------------------
 #
@@ -950,8 +954,7 @@ class HasEvent(Rule):
     def __init__(self,list):
         Rule.__init__(self,list)
         if self.list and self.list[0]:
-            self.date = Date.Date()
-            self.date.set(self.list[0])
+            self.date = _date_parser.parse(self.list[0])
         else:
             self.date = None
 
@@ -1004,8 +1007,7 @@ class HasFamilyEvent(Rule):
     def __init__(self,list):
         Rule.__init__(self,list)
         if self.list and self.list[0]:
-            self.date = Date.Date()
-            self.date.set(self.list[0])
+            self.date = _date_parser.parse(self.list[0])
         else:
             self.date = None
 
@@ -1116,8 +1118,7 @@ class HasBirth(Rule):
     def __init__(self,list):
         Rule.__init__(self,list)
         if self.list and self.list[0]:
-            self.date = Date.Date()
-            self.date.set(self.list[0])
+            self.date = _date_parser.parse(self.list[0])
         else:
             self.date = None
         
@@ -1163,8 +1164,7 @@ class HasDeath(Rule):
     def __init__(self,list):
         Rule.__init__(self,list)
         if self.list and self.list[0]:
-            self.date = Date.Date()
-            self.date.set(self.list[0])
+            self.date = _date_parser.parse(self.list[0])
         else:
             self.date = None
 
